<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginMedium"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/marginMedium">

        <ImageView
            android:id="@+id/mission_patch"
            android:layout_width="@dimen/mission_icon_dimen"
            android:layout_height="@dimen/mission_icon_dimen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/ic_rocket" />

        <LinearLayout
            android:id="@+id/launch_details_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginSmall"
            android:layout_marginEnd="@dimen/marginSmall"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/view_success"
            app:layout_constraintStart_toEndOf="@+id/mission_patch"
            app:layout_constraintTop_toTopOf="parent">

            <com.challenge.spacex.ui.main.fragments.widgets.LineDetailsView
                android:id="@+id/launch_details_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/launch_data_mission" />

            <com.challenge.spacex.ui.main.fragments.widgets.LineDetailsView
                android:id="@+id/launch_details_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_mission"
                app:title="@string/launch_data_date_time" />

            <com.challenge.spacex.ui.main.fragments.widgets.LineDetailsView
                android:id="@+id/launch_details_name_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_date_time"
                app:title="@string/launch_data_rocket" />

            <com.challenge.spacex.ui.main.fragments.widgets.LineDetailsView
                android:id="@+id/launch_details_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/launch_details_name_time"
                app:title="@string/launch_data_days" />
        </LinearLayout>

        <ImageView
            android:id="@+id/view_success"
            android:layout_width="@dimen/launch_success_icon_dimen"
            android:layout_height="@dimen/launch_success_icon_dimen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/ic_rocket" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>